# quotes-http-server

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
migrations/: 20231212092225_create_quotes_table.down.sql  20231212092225_create_quotes_table.up.sql
src/: handlers.rs  main.rs
