[package]
name = "quotes-http-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
chrono = "0.4.31"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["postgres", "macros", "uuid", "chrono", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.34.0", features = ["full"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
